# eth-stablecoin-simulator

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml
db/: README.md  apply.sh  feedback_backlog.sql  feedback_resolve.sql  memberships.sql  product_events.sql  rls.sql  schema.sql  supabase_auth_trigger.sql  supabase_grants.sql  verify.sh
frontend/: README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
java-service/: Dockerfile  README.md  pom.xml
python-agent/: Dockerfile  README.md  pyproject.toml
python-agent/agents/services/: chart_intent.py  feedback_backlog.py  llm_gateway.py  parse_goal.py  rate_limit.py  recommend_yield.py  request_limits.py  summarize_audit.py
python-agent/agents/tools/: __init__.py  java_charts.py  java_market_data.py
python-agent/app/: main.py  middleware.py
python-agent/models/: __init__.py  chart_spec.py
python-agent/prompts/: parse-goal-v1.txt  recommend-yield-v1.txt  summarize-audit-v1.txt
python-agent/tests/: conftest.py  test_chart_intent.py  test_endpoints.py  test_feedback_backlog.py  test_health.py  test_java_tools.py  test_llm_gateway.py  test_numeric_passthrough.py  test_request_limits.py
python-agent/tests/fixtures/charts/: health-ratio-sweep.json  liquidation-price-band.json
scripts/: check-java.sh  ci-smoke.sh  dev-start.sh  dev-stop.sh  gen-python-requirements-lock.sh  java-test.sh  load-env.sh  setup-supabase-db.sh  smoke-test.sh  sync-fixtures.sh  test-agent.sh  test-price-fallback.sh  test-public-price.sh  (+1 more)
(+315 files in other folders)
