[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-stablecoin-python-agent"
version = "0.1.0"
description = "FastAPI agent for ETH stablecoin simulator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.117",
    "uvicorn[standard]>=0.27,<0.36",
    "httpx>=0.27,<0.29",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agents*", "models*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]